trois premières etapes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="central-zone">
+        <div class="central-zone__card"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
