--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
   <body>
     <div id="app">
       <div class="central-zone">
-        <div class="central-zone__card"></div>
+        <div class="central-zone__card">
+          <div class="card__top-left">
+            <div class="top-left__number">A</div>
+            <div class="top-left__form">&spades;</div>
+          </div>
+          <div class="card__center">
+            <div class="center__form">&spades;</div>
+          </div>
+          <div class="card__bottom-right">
+            <div class="bottom-right__form">&spades;</div>
+            <div class="bottom-right__number">A</div>
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
