--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <div class="central-zone">
-        <div class="central-zone__card">
+        <div class="central-zone__card" id="card-1">
             <div class="card__top">
               <div class="top__left">
                 <div class="left__number">A</div>
@@ -26,6 +26,74 @@
                 <div class="right__number">A</div>
               </div>
             </div>
+        </div>
+        <div class="central-zone__card" id="card-2">
+          <div class="card__top">
+            <div class="top__left">
+              <div class="left__number">A</div>
+              <div class="left__form">&spades;</div>
+            </div>
+          </div>
+          <div class="card__center">
+            <div class="center__form">&spades;</div>
+          </div>
+          <div class="card__bottom">
+            <div class="bottom__right">
+              <div class="right__form">&spades;</div>
+              <div class="right__number">A</div>
+            </div>
+          </div>
+        </div>
+        <div class="central-zone__card" id="card-3">
+        <div class="card__top">
+          <div class="top__left">
+            <div class="left__number">A</div>
+            <div class="left__form">&spades;</div>
+          </div>
+        </div>
+        <div class="card__center">
+          <div class="center__form">&spades;</div>
+        </div>
+        <div class="card__bottom">
+          <div class="bottom__right">
+            <div class="right__form">&spades;</div>
+            <div class="right__number">A</div>
+          </div>
+        </div>
+        </div>
+        <div class="central-zone__card" id="card-4">
+          <div class="card__top">
+            <div class="top__left">
+              <div class="left__number">A</div>
+              <div class="left__form">&spades;</div>
+            </div>
+          </div>
+          <div class="card__center">
+            <div class="center__form">&spades;</div>
+          </div>
+          <div class="card__bottom">
+            <div class="bottom__right">
+              <div class="right__form">&spades;</div>
+              <div class="right__number">A</div>
+            </div>
+          </div>
+        </div>
+        <div class="central-zone__card" id="card-5">
+          <div class="card__top">
+            <div class="top__left">
+              <div class="left__number">A</div>
+              <div class="left__form">&spades;</div>
+            </div>
+          </div>
+          <div class="card__center">
+            <div class="center__form">&spades;</div>
+          </div>
+          <div class="card__bottom">
+            <div class="bottom__right">
+              <div class="right__form">&spades;</div>
+              <div class="right__number">A</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
