:construction: création main

--- a/index.html
+++ b/index.html
@@ -95,6 +95,23 @@
             </div>
           </div>
         </div>
+        <div class="central-zone__card" id="card-6">
+          <div class="card__top">
+            <div class="top__left">
+              <div class="left__number">A</div>
+              <div class="left__form">&spades;</div>
+            </div>
+          </div>
+          <div class="card__center">
+            <div class="center__form">&spades;</div>
+          </div>
+          <div class="card__bottom">
+            <div class="bottom__right">
+              <div class="right__form">&spades;</div>
+              <div class="right__number">A</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
