--- a/index.html
+++ b/index.html
@@ -112,6 +112,73 @@
             </div>
           </div>
         </div>
+        <div class="central-zone__defausse">
+            <div class="defausse__card" id="card-7">
+              <div class="card__top">
+                <div class="top__left">
+                  <div class="left__number">A</div>
+                  <div class="left__form">&spades;</div>
+                </div>
+              </div>
+              <div class="card__center">
+                <div class="center__form">&spades;</div>
+              </div>
+              <div class="card__bottom">
+                <div class="bottom__right">
+                  <div class="right__form">&spades;</div>
+                  <div class="right__number">A</div>
+                </div>
+              </div>
+            </div>
+            <div class="defausse__card" id="card-8">
+              <div class="card__top">
+                <div class="top__left">
+                  <div class="left__number">A</div>
+                  <div class="left__form">&spades;</div>
+                </div>
+              </div>
+              <div class="card__center">
+                <div class="center__form">&spades;</div>
+              </div>
+              <div class="card__bottom">
+                <div class="bottom__right">
+                  <div class="right__form">&spades;</div>
+                  <div class="right__number">A</div>
+                </div>
+              </div>
+            </div>
+            <div class="defausse__card" id="card-8">
+              <div class="card__top">
+                <div class="top__left">
+                  <div class="left__number">A</div>
+                  <div class="left__form">&spades;</div>
+                </div>
+              </div>
+              <div class="card__center">
+                <div class="center__form">&spades;</div>
+              </div>
+              <div class="card__bottom">
+                <div class="bottom__right">
+                  <div class="right__form">&spades;</div>
+                  <div class="right__number">A</div>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="central-zone__opponent">
+          <div class="opponent__card" id="card-10">
+          </div>
+          <div class="opponent__card" id="card-11">
+          </div>
+          <div class="opponent__card" id="card-12">
+          </div>
+          <div class="opponent__card" id="card-13">
+          </div>
+          <div class="opponent__card" id="card-14">
+          </div>
+          <div class="opponent__card" id="card-15">
+          </div>
+        </div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
